# emg-force-bridge

./: .gitignore  CONTRIBUTING.md  NOTES.md  README.md  gitignore  platformio.ini  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
acquisition/: serial_reader.py
acquisition/arduino/: emg_stream.ino
backend/: main.py  requirements.txt
backend/core/: config.py
backend/data/: app.db
backend/db/: models.py  session.py
backend/models/: schemas.py
backend/routers/: analytics.py  auth.py  demo.py  emg.py  imu.py  sessions.py
backend/routes/: metrics.py  stream.py
backend/serial/: ble_gateway.py  reader.py
backend/services/: analytics.py  emg_processing.py  psd.py
backend/static/: index.html
docs/: ads1115_config.md  consent_form.md  data_schema.md  dsp.md  protocol.md  pt_outreach_email.md  quick_reference.md  sequence_diagrams.md  systems_architecture.md
emg/: __init__.py  config.py  normalization.py  windowing.py
emg/acquisition/: serial_source.py
emg/acquisition/arduino/: emg_stream.ino
emg/artifacts/: detectors.py
emg/evaluation/: metrics.py
emg/features/: freq.py  time.py
emg/io/: logger.py
emg/modeling/: classical.py  train.py
emg/preprocessing/: __init__.py  envelope.py  features.py  filters.py  rectify.py
emg/realtime/: pipeline.py
emg/utils/: signals.py
firmware/: .gitignore  CMakeLists.txt  README.md  sdkconfig
firmware/main/: CMakeLists.txt
firmware/src/: CMakeLists.txt  main.c
firmware/src/drivers/: adc_emg_driver.c  gpio_test.c  gpio_test.h  i2c_scan.c  i2c_scan.h  uart_transport.c
firmware/src/services/: ble_emg.c  emg_processor.c  packetizer.c
firmware/src/tasks/: task_acq.c  task_proc.c  task_stream.c
ml/: README.md
ml/models/: classical.py
ml/train/: train.py
models/: train.py
preprocessing/: features.py  filter.py
scripts/: offline_process.py  record_and_process.py
tests/: test_emg_processing.py  test_filter.py
ui/: dashboard.py  plots.py  realtime_dashboard.py  streamlit_app.py
ui/react/app/: README.md  SETUP_CLINICAL_DASHBOARD.md  index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  vite.config.ts
ui/react/app/src/: App.tsx  main.tsx  styles.css
ui/streamlit/: api_client.py  dashboard.py  plots.py
(+18 files in other folders)
