[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "emg-force-bridge"
version = "0.1.0"
description = "EMG signal processing and real-time monitoring"
authors = [{name = "Logan", email = "logan@example.com"}]
readme = "README.md"
requires-python = ">=3.8"
dependencies = [
    "numpy",
    "scipy", 
    "matplotlib",
    "pyserial",
    "pandas",
    "scikit-learn",
    "streamlit",
    "requests",
    "joblib",
    "pytest",
]

[project.optional-dependencies]
dev = ["pytest", "black", "flake8"]

[tool.setuptools.packages.find]
where = ["."]
include = ["emg*"]